--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@
     --pink: #e53170;
     --red: #f25f4c;
     --orange: #ff8906;
-    --branch: 1px solid #a7a9be;
+    --branch: 1px solid #ffffff;
 }
 
 html {
