--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@
     --background: #e6af57;
     --foreground: #fffffe;
     --pink: #e53170;
-    --red: #f25f4c;
+    --red: #d95544;
     --orange: #ff8906;
     --branch: 1px solid #ffffff;
 }
